adjust colors and add gradients

--- a/app/src/main/res/drawable/gradient_background8.xml
+++ b/app/src/main/res/drawable/gradient_background8.xml
@@ -3,8 +3,8 @@
     <corners android:radius="8dp"/>
     <gradient
         android:angle="180"
-        android:centerColor="#19b9ea"
-        android:endColor="#217ff1"
-        android:startColor="#35fae0"
+        android:centerColor="#03a9f4"
+        android:endColor="#2962ff"
+        android:startColor="#40c4ff"
         android:type="linear"/>
 </shape>
