--- a/app/src/main/res/layout/activity_gradients.xml
+++ b/app/src/main/res/layout/activity_gradients.xml
@@ -67,13 +67,25 @@
                             android:textColor="#fff"
                             android:textSize="32sp"/>
 
-
                         <android.support.v7.widget.AppCompatTextView
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:layout_margin="8dp"
                             android:layout_marginBottom="8dp"
                             android:background="@drawable/gradient_background3c"
+                            android:elevation="4dp"
+                            android:gravity="center"
+                            android:padding="8dp"
+                            android:text="@string/lorem_ipsum_button"
+                            android:textColor="#fff"
+                            android:textSize="32sp"/>
+
+                        <android.support.v7.widget.AppCompatTextView
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:layout_margin="8dp"
+                            android:layout_marginBottom="8dp"
+                            android:background="@drawable/gradient_background15c"
                             android:elevation="4dp"
                             android:gravity="center"
                             android:padding="8dp"
@@ -100,6 +112,32 @@
                             android:layout_margin="8dp"
                             android:layout_marginBottom="8dp"
                             android:background="@drawable/gradient_background7c"
+                            android:elevation="4dp"
+                            android:gravity="center"
+                            android:padding="8dp"
+                            android:text="@string/lorem_ipsum_button"
+                            android:textColor="#fff"
+                            android:textSize="32sp"/>
+
+                        <android.support.v7.widget.AppCompatTextView
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:layout_margin="8dp"
+                            android:layout_marginBottom="8dp"
+                            android:background="@drawable/gradient_background13c"
+                            android:elevation="4dp"
+                            android:gravity="center"
+                            android:padding="8dp"
+                            android:text="@string/lorem_ipsum_button"
+                            android:textColor="#fff"
+                            android:textSize="32sp"/>
+
+                        <android.support.v7.widget.AppCompatTextView
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:layout_margin="8dp"
+                            android:layout_marginBottom="8dp"
+                            android:background="@drawable/gradient_background9c"
                             android:elevation="4dp"
                             android:gravity="center"
                             android:padding="8dp"
@@ -218,6 +256,74 @@
                     android:layout_height="wrap_content"
                     android:layout_margin="8dp"
                     android:background="@drawable/gradient_background4"
+                    android:elevation="4dp"
+                    android:padding="8dp">
+
+                    <android.support.v7.widget.LinearLayoutCompat
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:orientation="vertical">
+
+                        <android.support.v7.widget.AppCompatTextView
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:layout_marginBottom="8dp"
+                            android:text="@string/lorem_ipsum_short"
+                            android:textColor="#fff"
+                            android:textSize="16sp"/>
+
+
+                        <android.support.v7.widget.AppCompatTextView
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:layout_marginBottom="8dp"
+                            android:text="@string/lorem_ipsum_short"
+                            android:textColor="#fff"
+                            android:textSize="16sp"/>
+
+                    </android.support.v7.widget.LinearLayoutCompat>
+
+                </FrameLayout>
+
+                <FrameLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_margin="8dp"
+                    android:background="@drawable/gradient_background15"
+                    android:elevation="4dp"
+                    android:padding="8dp">
+
+                    <android.support.v7.widget.LinearLayoutCompat
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:orientation="vertical">
+
+                        <android.support.v7.widget.AppCompatTextView
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:layout_marginBottom="8dp"
+                            android:text="@string/lorem_ipsum_short"
+                            android:textColor="#fff"
+                            android:textSize="16sp"/>
+
+
+                        <android.support.v7.widget.AppCompatTextView
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:layout_marginBottom="8dp"
+                            android:text="@string/lorem_ipsum_short"
+                            android:textColor="#fff"
+                            android:textSize="16sp"/>
+
+                    </android.support.v7.widget.LinearLayoutCompat>
+
+                </FrameLayout>
+
+                <FrameLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_margin="8dp"
+                    android:background="@drawable/gradient_background16"
                     android:elevation="4dp"
                     android:padding="8dp">
 
@@ -412,6 +518,70 @@
                     android:layout_height="wrap_content"
                     android:layout_margin="8dp"
                     android:background="@drawable/gradient_background8"
+                    android:elevation="4dp"
+                    android:padding="8dp">
+
+                    <android.support.v7.widget.LinearLayoutCompat
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:orientation="vertical">
+
+                        <android.support.v7.widget.AppCompatTextView
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:layout_marginBottom="8dp"
+                            android:text="@string/lorem_ipsum_short"
+                            android:textSize="16sp"/>
+
+
+                        <android.support.v7.widget.AppCompatTextView
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:layout_marginBottom="8dp"
+                            android:text="@string/lorem_ipsum_short"
+                            android:textSize="16sp"/>
+
+                    </android.support.v7.widget.LinearLayoutCompat>
+
+                </FrameLayout>
+
+                <FrameLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_margin="8dp"
+                    android:background="@drawable/gradient_background13"
+                    android:elevation="4dp"
+                    android:padding="8dp">
+
+                    <android.support.v7.widget.LinearLayoutCompat
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:orientation="vertical">
+
+                        <android.support.v7.widget.AppCompatTextView
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:layout_marginBottom="8dp"
+                            android:text="@string/lorem_ipsum_short"
+                            android:textSize="16sp"/>
+
+
+                        <android.support.v7.widget.AppCompatTextView
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:layout_marginBottom="8dp"
+                            android:text="@string/lorem_ipsum_short"
+                            android:textSize="16sp"/>
+
+                    </android.support.v7.widget.LinearLayoutCompat>
+
+                </FrameLayout>
+
+                <FrameLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_margin="8dp"
+                    android:background="@drawable/gradient_background14"
                     android:elevation="4dp"
                     android:padding="8dp">
 
