--- a/app/src/main/res/drawable/gradient_background13.xml
+++ b/app/src/main/res/drawable/gradient_background13.xml
@@ -2,9 +2,9 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
     <corners android:radius="8dp"/>
     <gradient
-        android:angle="180"
-        android:centerColor="#f50057"
-        android:endColor="#ab47bc"
-        android:startColor="#f50057"
+        android:angle="0"
+        android:centerColor="#673AB7"
+        android:endColor="#9C27B0"
+        android:startColor="#3f51b5"
         android:type="linear"/>
 </shape>
