--- a/app/src/main/res/drawable/gradient_background13b.xml
+++ b/app/src/main/res/drawable/gradient_background13b.xml
@@ -2,8 +2,8 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
     <gradient
         android:angle="90"
-        android:centerColor="#f50057"
-        android:endColor="#ab47bc"
-        android:startColor="#f50057"
+        android:centerColor="#673AB7"
+        android:endColor="#9C27B0"
+        android:startColor="#3f51b5"
         android:type="linear"/>
 </shape>
