--- a/app/src/main/res/drawable/gradient_background15b.xml
+++ b/app/src/main/res/drawable/gradient_background15b.xml
@@ -2,8 +2,8 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
     <gradient
         android:angle="90"
-        android:centerColor="#f50057"
-        android:endColor="#ab47bc"
-        android:startColor="#f50057"
+        android:centerColor="#00C853"
+        android:endColor="#00BFA5"
+        android:startColor="#8BC34A"
         android:type="linear"/>
 </shape>
