--- a/app/src/main/res/drawable/gradient_background15c.xml
+++ b/app/src/main/res/drawable/gradient_background15c.xml
@@ -1,10 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
-    <corners android:radius="8dp"/>
+    <corners android:radius="50dp"/>
     <gradient
         android:angle="0"
-        android:centerColor="#f50057"
-        android:endColor="#ab47bc"
-        android:startColor="#f50057"
+        android:centerColor="#00C853"
+        android:endColor="#00BFA5"
+        android:startColor="#8BC34A"
         android:type="linear"/>
 </shape>
