--- a/app/src/main/res/drawable/gradient_background16.xml
+++ b/app/src/main/res/drawable/gradient_background16.xml
@@ -3,8 +3,8 @@
     <corners android:radius="8dp"/>
     <gradient
         android:angle="180"
-        android:centerColor="#f50057"
-        android:endColor="#ab47bc"
-        android:startColor="#f50057"
+        android:centerColor="#00C853"
+        android:endColor="#00BFA5"
+        android:startColor="#8BC34A"
         android:type="linear"/>
 </shape>
