--- a/app/src/main/res/drawable/gradient_background9c.xml
+++ b/app/src/main/res/drawable/gradient_background9c.xml
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
+    <corners android:radius="50dp"/>
     <gradient
-        android:angle="90"
+        android:angle="0"
         android:centerColor="#f50057"
         android:endColor="#ab47bc"
         android:startColor="#f50057"
