--- a/app/src/main/res/layout/layout_theme_one.xml
+++ b/app/src/main/res/layout/layout_theme_one.xml
@@ -97,7 +97,6 @@
 
                 </android.support.v7.widget.CardView>
 
-
                 <android.support.v7.widget.CardView
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
@@ -157,11 +156,11 @@
 
 
                 </android.support.v7.widget.CardView>
-
+<!--1-->
                 <android.support.v7.widget.CardView
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    app:cardBackgroundColor="#f4eade"
+                    app:cardBackgroundColor="@color/tone_card_background_1"
                     app:cardCornerRadius="8dp"
                     app:cardElevation="4dp"
                     app:cardUseCompatPadding="true"
@@ -224,11 +223,11 @@
 
 
                 </android.support.v7.widget.CardView>
-
+                <!--2-->
                 <android.support.v7.widget.CardView
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    app:cardBackgroundColor="#fffae1"
+                    app:cardBackgroundColor="@color/tone_card_background_2"
                     app:cardCornerRadius="8dp"
                     app:cardElevation="4dp"
                     app:cardUseCompatPadding="true"
@@ -292,10 +291,11 @@
 
                 </android.support.v7.widget.CardView>
 
+<!--4-->
                 <android.support.v7.widget.CardView
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    app:cardBackgroundColor="#fdffff"
+                    app:cardBackgroundColor="@color/tone_card_background_3"
                     app:cardCornerRadius="8dp"
                     app:cardElevation="4dp"
                     app:cardUseCompatPadding="true"
@@ -358,11 +358,11 @@
 
 
                 </android.support.v7.widget.CardView>
-
+<!--5-->
                 <android.support.v7.widget.CardView
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    app:cardBackgroundColor="#f1f3ce"
+                    app:cardBackgroundColor="@color/tone_card_background_4"
                     app:cardCornerRadius="8dp"
                     app:cardElevation="4dp"
                     app:cardUseCompatPadding="true"
@@ -425,11 +425,11 @@
 
 
                 </android.support.v7.widget.CardView>
-
+<!--6-->
                 <android.support.v7.widget.CardView
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    app:cardBackgroundColor="#f7efe2"
+                    app:cardBackgroundColor="@color/tone_card_background_5"
                     app:cardCornerRadius="8dp"
                     app:cardElevation="4dp"
                     app:cardUseCompatPadding="true"
@@ -492,11 +492,11 @@
 
 
                 </android.support.v7.widget.CardView>
-
+<!--7-->
                 <android.support.v7.widget.CardView
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    app:cardBackgroundColor="#ebdcb2"
+                    app:cardBackgroundColor="@color/tone_card_background_6"
                     app:cardCornerRadius="8dp"
                     app:cardElevation="4dp"
                     app:cardUseCompatPadding="true"
@@ -559,11 +559,11 @@
 
 
                 </android.support.v7.widget.CardView>
-
+<!--8-->
                 <android.support.v7.widget.CardView
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    app:cardBackgroundColor="#fef3e2"
+                    app:cardBackgroundColor="@color/tone_card_background_7"
                     app:cardCornerRadius="8dp"
                     app:cardElevation="4dp"
                     app:cardUseCompatPadding="true"
@@ -626,11 +626,11 @@
 
 
                 </android.support.v7.widget.CardView>
-
+<!--9-->
                 <android.support.v7.widget.CardView
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    app:cardBackgroundColor="#fef2ef"
+                    app:cardBackgroundColor="@color/tone_card_background_8"
                     app:cardCornerRadius="8dp"
                     app:cardElevation="4dp"
                     app:cardUseCompatPadding="true"
@@ -693,11 +693,11 @@
 
 
                 </android.support.v7.widget.CardView>
-
+<!--10-->
                 <android.support.v7.widget.CardView
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    app:cardBackgroundColor="#eae2d6"
+                    app:cardBackgroundColor="@color/tone_card_background_9"
                     app:cardCornerRadius="8dp"
                     app:cardElevation="4dp"
                     app:cardUseCompatPadding="true"
@@ -760,11 +760,11 @@
 
 
                 </android.support.v7.widget.CardView>
-
+<!--11-->
                 <android.support.v7.widget.CardView
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    app:cardBackgroundColor="#f0efea"
+                    app:cardBackgroundColor="@color/tone_card_background_10"
                     app:cardCornerRadius="8dp"
                     app:cardElevation="4dp"
                     app:cardUseCompatPadding="true"
@@ -827,11 +827,11 @@
 
 
                 </android.support.v7.widget.CardView>
-
+<!--12-->
                 <android.support.v7.widget.CardView
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    app:cardBackgroundColor="#fcfdfe"
+                    app:cardBackgroundColor="@color/tone_card_background_11"
                     app:cardCornerRadius="8dp"
                     app:cardElevation="4dp"
                     app:cardUseCompatPadding="true"
@@ -885,6 +885,140 @@
 
                             <android.support.v7.widget.AppCompatButton
                                 android:id="@+id/button40"
+                                style="@style/Base.Widget.AppCompat.Button.Borderless"
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:text="Button 2"/>
+                        </LinearLayout>
+                    </LinearLayout>
+
+
+                </android.support.v7.widget.CardView>
+<!--13-->
+                <android.support.v7.widget.CardView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    app:cardBackgroundColor="@color/tone_card_background_12"
+                    app:cardCornerRadius="8dp"
+                    app:cardElevation="4dp"
+                    app:cardUseCompatPadding="true"
+                    app:contentPaddingLeft="8dp"
+                    app:contentPaddingRight="8dp"
+                    app:contentPaddingTop="8dp">
+
+                    <LinearLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:orientation="vertical">
+
+                        <android.support.v7.widget.AppCompatTextView
+                            android:id="@+id/heading12"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:layout_marginBottom="4dp"
+                            android:text="@string/lorem_ipsum_heading"
+                            android:textSize="20sp"/>
+
+                        <android.support.v7.widget.AppCompatTextView
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:layout_marginBottom="8dp"
+                            android:text="@string/lorem_ipsum_short"
+                            android:textSize="16sp"/>
+
+                        <View
+                            android:layout_width="match_parent"
+                            android:layout_height="0.5dp"
+                            android:background="#888"/>
+
+                        <LinearLayout
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:orientation="horizontal">
+
+                            <android.support.v7.widget.AppCompatButton
+                                android:id="@+id/button41"
+                                style="@style/Base.Widget.AppCompat.Button.Colored"
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:text="Button 1"/>
+
+                            <android.support.v7.widget.AppCompatButton
+                                android:id="@+id/button42"
+                                style="@style/Base.Widget.AppCompat.Button.Borderless.Colored"
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:text="Button 1"/>
+
+                            <android.support.v7.widget.AppCompatButton
+                                android:id="@+id/button43"
+                                style="@style/Base.Widget.AppCompat.Button.Borderless"
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:text="Button 2"/>
+                        </LinearLayout>
+                    </LinearLayout>
+
+
+                </android.support.v7.widget.CardView>
+
+                <android.support.v7.widget.CardView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    app:cardBackgroundColor="@color/tone_card_background_13"
+                    app:cardCornerRadius="8dp"
+                    app:cardElevation="4dp"
+                    app:cardUseCompatPadding="true"
+                    app:contentPaddingLeft="8dp"
+                    app:contentPaddingRight="8dp"
+                    app:contentPaddingTop="8dp">
+
+                    <LinearLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:orientation="vertical">
+
+                        <android.support.v7.widget.AppCompatTextView
+                            android:id="@+id/heading13"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:layout_marginBottom="4dp"
+                            android:text="@string/lorem_ipsum_heading"
+                            android:textSize="20sp"/>
+
+                        <android.support.v7.widget.AppCompatTextView
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:layout_marginBottom="8dp"
+                            android:text="@string/lorem_ipsum_short"
+                            android:textSize="16sp"/>
+
+                        <View
+                            android:layout_width="match_parent"
+                            android:layout_height="0.5dp"
+                            android:background="#888"/>
+
+                        <LinearLayout
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:orientation="horizontal">
+
+                            <android.support.v7.widget.AppCompatButton
+                                android:id="@+id/button44"
+                                style="@style/Base.Widget.AppCompat.Button.Colored"
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:text="Button 1"/>
+
+                            <android.support.v7.widget.AppCompatButton
+                                android:id="@+id/button45"
+                                style="@style/Base.Widget.AppCompat.Button.Borderless.Colored"
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:text="Button 1"/>
+
+                            <android.support.v7.widget.AppCompatButton
+                                android:id="@+id/button46"
                                 style="@style/Base.Widget.AppCompat.Button.Borderless"
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
