--- a/app/src/main/res/layout/activity_gradients.xml
+++ b/app/src/main/res/layout/activity_gradients.xml
@@ -15,6 +15,7 @@
             android:layout_height="wrap_content">
 
             <android.support.v7.widget.Toolbar
+                android:background="#fff"
                 android:id="@+id/toolbar"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"></android.support.v7.widget.Toolbar>
@@ -52,7 +53,7 @@
                             android:padding="8dp"
                             android:text="@string/lorem_ipsum_button"
                             android:textColor="#fff"
-                            android:textSize="32sp"/>
+                            android:textSize="32dp"/>
 
                         <android.support.v7.widget.AppCompatTextView
                             android:layout_width="match_parent"
@@ -65,7 +66,7 @@
                             android:padding="8dp"
                             android:text="@string/lorem_ipsum_button"
                             android:textColor="#fff"
-                            android:textSize="32sp"/>
+                            android:textSize="32dp"/>
 
                         <android.support.v7.widget.AppCompatTextView
                             android:layout_width="match_parent"
@@ -78,7 +79,7 @@
                             android:padding="8dp"
                             android:text="@string/lorem_ipsum_button"
                             android:textColor="#fff"
-                            android:textSize="32sp"/>
+                            android:textSize="32dp"/>
 
                         <android.support.v7.widget.AppCompatTextView
                             android:layout_width="match_parent"
@@ -91,7 +92,7 @@
                             android:padding="8dp"
                             android:text="@string/lorem_ipsum_button"
                             android:textColor="#fff"
-                            android:textSize="32sp"/>
+                            android:textSize="32dp"/>
 
                         <android.support.v7.widget.AppCompatTextView
                             android:layout_width="match_parent"
@@ -104,7 +105,7 @@
                             android:padding="8dp"
                             android:text="@string/lorem_ipsum_button"
                             android:textColor="#fff"
-                            android:textSize="32sp"/>
+                            android:textSize="32dp"/>
 
                         <android.support.v7.widget.AppCompatTextView
                             android:layout_width="match_parent"
@@ -117,7 +118,7 @@
                             android:padding="8dp"
                             android:text="@string/lorem_ipsum_button"
                             android:textColor="#fff"
-                            android:textSize="32sp"/>
+                            android:textSize="32dp"/>
 
                         <android.support.v7.widget.AppCompatTextView
                             android:layout_width="match_parent"
@@ -130,7 +131,7 @@
                             android:padding="8dp"
                             android:text="@string/lorem_ipsum_button"
                             android:textColor="#fff"
-                            android:textSize="32sp"/>
+                            android:textSize="32dp"/>
 
                         <android.support.v7.widget.AppCompatTextView
                             android:layout_width="match_parent"
@@ -143,7 +144,7 @@
                             android:padding="8dp"
                             android:text="@string/lorem_ipsum_button"
                             android:textColor="#fff"
-                            android:textSize="32sp"/>
+                            android:textSize="32dp"/>
 
                     </android.support.v7.widget.LinearLayoutCompat>
 
@@ -168,7 +169,7 @@
                             android:layout_marginBottom="8dp"
                             android:text="@string/lorem_ipsum_short"
                             android:textColor="#fff"
-                            android:textSize="16sp"/>
+                            android:textSize="16dp"/>
 
 
                         <android.support.v7.widget.AppCompatTextView
@@ -177,7 +178,7 @@
                             android:layout_marginBottom="8dp"
                             android:text="@string/lorem_ipsum_short"
                             android:textColor="#fff"
-                            android:textSize="16sp"/>
+                            android:textSize="16dp"/>
 
                     </android.support.v7.widget.LinearLayoutCompat>
 
@@ -202,7 +203,7 @@
                             android:layout_marginBottom="8dp"
                             android:text="@string/lorem_ipsum_short"
                             android:textColor="#fff"
-                            android:textSize="16sp"/>
+                            android:textSize="16dp"/>
 
 
                         <android.support.v7.widget.AppCompatTextView
@@ -211,7 +212,7 @@
                             android:layout_marginBottom="8dp"
                             android:text="@string/lorem_ipsum_short"
                             android:textColor="#fff"
-                            android:textSize="16sp"/>
+                            android:textSize="16dp"/>
 
                     </android.support.v7.widget.LinearLayoutCompat>
 
@@ -236,7 +237,7 @@
                             android:layout_marginBottom="8dp"
                             android:text="@string/lorem_ipsum_short"
                             android:textColor="#fff"
-                            android:textSize="16sp"/>
+                            android:textSize="16dp"/>
 
 
                         <android.support.v7.widget.AppCompatTextView
@@ -245,7 +246,7 @@
                             android:layout_marginBottom="8dp"
                             android:text="@string/lorem_ipsum_short"
                             android:textColor="#fff"
-                            android:textSize="16sp"/>
+                            android:textSize="16dp"/>
 
                     </android.support.v7.widget.LinearLayoutCompat>
 
@@ -270,7 +271,7 @@
                             android:layout_marginBottom="8dp"
                             android:text="@string/lorem_ipsum_short"
                             android:textColor="#fff"
-                            android:textSize="16sp"/>
+                            android:textSize="16dp"/>
 
 
                         <android.support.v7.widget.AppCompatTextView
@@ -279,7 +280,7 @@
                             android:layout_marginBottom="8dp"
                             android:text="@string/lorem_ipsum_short"
                             android:textColor="#fff"
-                            android:textSize="16sp"/>
+                            android:textSize="16dp"/>
 
                     </android.support.v7.widget.LinearLayoutCompat>
 
@@ -304,7 +305,7 @@
                             android:layout_marginBottom="8dp"
                             android:text="@string/lorem_ipsum_short"
                             android:textColor="#fff"
-                            android:textSize="16sp"/>
+                            android:textSize="16dp"/>
 
 
                         <android.support.v7.widget.AppCompatTextView
@@ -313,7 +314,7 @@
                             android:layout_marginBottom="8dp"
                             android:text="@string/lorem_ipsum_short"
                             android:textColor="#fff"
-                            android:textSize="16sp"/>
+                            android:textSize="16dp"/>
 
                     </android.support.v7.widget.LinearLayoutCompat>
 
@@ -338,7 +339,7 @@
                             android:layout_marginBottom="8dp"
                             android:text="@string/lorem_ipsum_short"
                             android:textColor="#fff"
-                            android:textSize="16sp"/>
+                            android:textSize="16dp"/>
 
 
                         <android.support.v7.widget.AppCompatTextView
@@ -347,7 +348,7 @@
                             android:layout_marginBottom="8dp"
                             android:text="@string/lorem_ipsum_short"
                             android:textColor="#fff"
-                            android:textSize="16sp"/>
+                            android:textSize="16dp"/>
 
                     </android.support.v7.widget.LinearLayoutCompat>
 
@@ -371,7 +372,7 @@
                             android:layout_height="wrap_content"
                             android:layout_marginBottom="8dp"
                             android:text="@string/lorem_ipsum_short"
-                            android:textSize="16sp"/>
+                            android:textSize="16dp"/>
 
 
                         <android.support.v7.widget.AppCompatTextView
@@ -379,7 +380,7 @@
                             android:layout_height="wrap_content"
                             android:layout_marginBottom="8dp"
                             android:text="@string/lorem_ipsum_short"
-                            android:textSize="16sp"/>
+                            android:textSize="16dp"/>
 
                     </android.support.v7.widget.LinearLayoutCompat>
 
@@ -403,7 +404,7 @@
                             android:layout_height="wrap_content"
                             android:layout_marginBottom="8dp"
                             android:text="@string/lorem_ipsum_short"
-                            android:textSize="16sp"/>
+                            android:textSize="16dp"/>
 
 
                         <android.support.v7.widget.AppCompatTextView
@@ -411,7 +412,7 @@
                             android:layout_height="wrap_content"
                             android:layout_marginBottom="8dp"
                             android:text="@string/lorem_ipsum_short"
-                            android:textSize="16sp"/>
+                            android:textSize="16dp"/>
 
                     </android.support.v7.widget.LinearLayoutCompat>
 
@@ -435,7 +436,7 @@
                             android:layout_height="wrap_content"
                             android:layout_marginBottom="8dp"
                             android:text="@string/lorem_ipsum_short"
-                            android:textSize="16sp"/>
+                            android:textSize="16dp"/>
 
 
                         <android.support.v7.widget.AppCompatTextView
@@ -443,7 +444,7 @@
                             android:layout_height="wrap_content"
                             android:layout_marginBottom="8dp"
                             android:text="@string/lorem_ipsum_short"
-                            android:textSize="16sp"/>
+                            android:textSize="16dp"/>
 
                     </android.support.v7.widget.LinearLayoutCompat>
 
@@ -467,7 +468,7 @@
                             android:layout_height="wrap_content"
                             android:layout_marginBottom="8dp"
                             android:text="@string/lorem_ipsum_short"
-                            android:textSize="16sp"/>
+                            android:textSize="16dp"/>
 
 
                         <android.support.v7.widget.AppCompatTextView
@@ -475,7 +476,7 @@
                             android:layout_height="wrap_content"
                             android:layout_marginBottom="8dp"
                             android:text="@string/lorem_ipsum_short"
-                            android:textSize="16sp"/>
+                            android:textSize="16dp"/>
 
                     </android.support.v7.widget.LinearLayoutCompat>
 
@@ -499,7 +500,7 @@
                             android:layout_height="wrap_content"
                             android:layout_marginBottom="8dp"
                             android:text="@string/lorem_ipsum_short"
-                            android:textSize="16sp"/>
+                            android:textSize="16dp"/>
 
 
                         <android.support.v7.widget.AppCompatTextView
@@ -507,7 +508,7 @@
                             android:layout_height="wrap_content"
                             android:layout_marginBottom="8dp"
                             android:text="@string/lorem_ipsum_short"
-                            android:textSize="16sp"/>
+                            android:textSize="16dp"/>
 
                     </android.support.v7.widget.LinearLayoutCompat>
 
@@ -531,7 +532,7 @@
                             android:layout_height="wrap_content"
                             android:layout_marginBottom="8dp"
                             android:text="@string/lorem_ipsum_short"
-                            android:textSize="16sp"/>
+                            android:textSize="16dp"/>
 
 
                         <android.support.v7.widget.AppCompatTextView
@@ -539,7 +540,7 @@
                             android:layout_height="wrap_content"
                             android:layout_marginBottom="8dp"
                             android:text="@string/lorem_ipsum_short"
-                            android:textSize="16sp"/>
+                            android:textSize="16dp"/>
 
                     </android.support.v7.widget.LinearLayoutCompat>
 
@@ -563,7 +564,7 @@
                             android:layout_height="wrap_content"
                             android:layout_marginBottom="8dp"
                             android:text="@string/lorem_ipsum_short"
-                            android:textSize="16sp"/>
+                            android:textSize="16dp"/>
 
 
                         <android.support.v7.widget.AppCompatTextView
@@ -571,7 +572,7 @@
                             android:layout_height="wrap_content"
                             android:layout_marginBottom="8dp"
                             android:text="@string/lorem_ipsum_short"
-                            android:textSize="16sp"/>
+                            android:textSize="16dp"/>
 
                     </android.support.v7.widget.LinearLayoutCompat>
 
@@ -595,7 +596,7 @@
                             android:layout_height="wrap_content"
                             android:layout_marginBottom="8dp"
                             android:text="@string/lorem_ipsum_short"
-                            android:textSize="16sp"/>
+                            android:textSize="16dp"/>
 
 
                         <android.support.v7.widget.AppCompatTextView
@@ -603,7 +604,7 @@
                             android:layout_height="wrap_content"
                             android:layout_marginBottom="8dp"
                             android:text="@string/lorem_ipsum_short"
-                            android:textSize="16sp"/>
+                            android:textSize="16dp"/>
 
                     </android.support.v7.widget.LinearLayoutCompat>
 
@@ -627,7 +628,7 @@
                             android:layout_height="wrap_content"
                             android:layout_marginBottom="8dp"
                             android:text="@string/lorem_ipsum_short"
-                            android:textSize="16sp"/>
+                            android:textSize="16dp"/>
 
 
                         <android.support.v7.widget.AppCompatTextView
@@ -635,7 +636,7 @@
                             android:layout_height="wrap_content"
                             android:layout_marginBottom="8dp"
                             android:text="@string/lorem_ipsum_short"
-                            android:textSize="16sp"/>
+                            android:textSize="16dp"/>
 
                     </android.support.v7.widget.LinearLayoutCompat>
 
@@ -659,7 +660,7 @@
                             android:layout_height="wrap_content"
                             android:layout_marginBottom="8dp"
                             android:text="@string/lorem_ipsum_short"
-                            android:textSize="16sp"/>
+                            android:textSize="16dp"/>
 
 
                         <android.support.v7.widget.AppCompatTextView
@@ -667,7 +668,7 @@
                             android:layout_height="wrap_content"
                             android:layout_marginBottom="8dp"
                             android:text="@string/lorem_ipsum_short"
-                            android:textSize="16sp"/>
+                            android:textSize="16dp"/>
 
                     </android.support.v7.widget.LinearLayoutCompat>
 
