--- a/app/src/main/res/layout/layout_full_gradient_item.xml
+++ b/app/src/main/res/layout/layout_full_gradient_item.xml
@@ -12,7 +12,7 @@
             android:layout_centerInParent="true"
             android:gravity="center"
             android:text="@string/checkout_on_github"
-            android:textSize="48sp"
+            android:textSize="48dp"
             android:textStyle="bold"/>
     </RelativeLayout>
 </layout>
